--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -2,67 +2,99 @@
 * {
   box-sizing: border-box;
 }
+
 h1 {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  text-align: center;;
+}
+
+section {
+  position: relative;
+  background-color: grey;
+  border: 3px solid black;
+  margin: 10px;
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 50px;
   font-family: Helvetica;
+  color: black;
+}
+
+section > h3{
+  position: absolute;
+  margin: 0;
+  padding: 5px 10px;
+  right: 0;
+  top: 0;
+  margin-bottom: 15px;
+
+}
+
+#chicken {
+  background-color: pink;
+  border: 3px solid black;
+  
+}
+
+#beef {
+  background-color: red;
+  border: 3px solid black;
   color: white;
 }
 
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
+#sushi {
+  background-color: yellow;
+  border: 3px solid black;
 }
+
+
+/* Simple Responsive Framework. */
+
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
+    border: 3px solid black;
   }
   .col-lg-1 {
-    width: 8.33%;
+    width: calc(8.33% - 20px);
   }
   .col-lg-2 {
-    width: 16.66%;
+    width: calc(16.66% - 20px);
   }
   .col-lg-3 {
-    width: 25%;
+    width: calc(25% - 20px);
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: calc(33.33% - 20px);
   }
   .col-lg-5 {
-    width: 41.66%;
+    width: calc(41.66% - 20px);
   }
   .col-lg-6 {
-    width: 50%;
+    width: calc(50% - 20px);
   }
   .col-lg-7 {
-    width: 58.33%;
+    width: calc(58.33% - 20px);
   }
   .col-lg-8 {
-    width: 66.66%;
+    width: calc(66.66% - 20px);
   }
   .col-lg-9 {
-    width: 74.99%;
+    width: calc(74.99% - 20px);
   }
   .col-lg-10 {
-    width: 83.33%;
+    width: calc(83.33% - 20px);
   }
   .col-lg-11 {
-    width: 91.66%;
+    width: calc(91.66% - 20px);
   }
   .col-lg-12 {
-    width: 100%;
+    width: calc(100% - 20px);
   }
 }
 
@@ -70,87 +102,87 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
+    border: 3px solid black;
   }
   .col-md-1 {
-    width: 8.33%;
+    width: calc(8.33% - 20px);
   }
   .col-md-2 {
-    width: 16.66%;
+    width: calc(16.66% - 20px);
   }
   .col-md-3 {
-    width: 25%;
+    width: calc(25% - 20px);
   }
   .col-md-4 {
-    width: 33.33%;
+    width: calc(33.33% - 20px);
   }
   .col-md-5 {
-    width: 41.66%;
+    width: calc(41.66% - 20px);
   }
   .col-md-6 {
-    width: 50%;
+    width: calc(50% - 20px); 
   }
   .col-md-7 {
-    width: 58.33%;
+    width: calc(58.33% - 20px);
   }
   .col-md-8 {
-    width: 66.66%;
+    width: calc(66.66% - 20px);
   }
   .col-md-9 {
-    width: 74.99%;
+    width: calc(74.99% - 20px);
   }
   .col-md-10 {
-    width: 83.33%;
+    width: calc(83.33% - 20px);
   }
   .col-md-11 {
-    width: 91.66%;
+    width: calc(91.66% - 20px);
   }
   .col-md-12 {
-    width: 100%;
+    width: calc(100% - 20px);
   }
 }
 
 
 @media (max-width: 767px) {
-  .col-sl-1, .col-sl-2, .col-sl-3, .col-sl-4, .col-sl-5, .col-sl-6, 
-  .col-sl-7, .col-sl-8, .col-sl-9, .col-sl-10, .col-sl-11, .col-sl-12 {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, 
+  .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
+    border: 3px solid black;
   }
-  .col-md-1 {
-    width: 8.33%;
+  .col-sm-1 {
+    width: calc(8.33% - 20px);
   }
-  .col-md-2 {
-    width: 16.66%;
+  .col-sm-2 {
+    width: calc(16.66% - 20px);
   }
-  .col-md-3 {
-    width: 25%;
+  .col-sm-3 {
+    width: calc(25% - 20px);
   }
-  .col-md-4 {
-    width: 33.33%;
+  .col-sm-4 {
+    width: calc(33.33% - 20px);
   }
-  .col-md-5 {
-    width: 41.66%;
+  .col-sm-5 {
+    width: calc(41.66% - 20px);
   }
-  .col-md-6 {
-    width: 50%;
+  .col-sm-6 {
+    width: calc(50% - 20px);
   }
-  .col-md-7 {
-    width: 58.33%;
+  .col-sm-7 {
+    width: calc(58.33% - 20px);
   }
-  .col-md-8 {
-    width: 66.66%;
+  .col-sm-8 {
+    width: calc(66.66% - 20px);
   }
-  .col-md-9 {
-    width: 74.99%;
+  .col-sm-9 {
+    width: calc(74.99% - 20px);
   }
-  .col-md-10 {
-    width: 83.33%;
+  .col-sm-10 {
+    width: calc(83.33% - 20px);
   }
-  .col-md-11 {
-    width: 91.66%;
+  .col-sm-11 {
+    width: calc(91.66% - 20px);
   }
-  .col-md-12 {
-    width: 100%;
+  .col-sm-12 {
+    width: calc(100% - 20px);
   }
 }
