--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -5,19 +5,23 @@
 
 h1 {
   margin-bottom: 30px;
-  text-align: center;;
+  text-align: center;
+  font-size: 1.75em;
 }
 
 section {
   position: relative;
   background-color: grey;
-  border: 3px solid black;
+  border: 1px solid black;
   margin: 10px;
+  font-size: 1.25em;
 }
 
 p {
-  margin-right: auto;
-  margin-left: auto;
+  font-size: 1em;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   margin-top: 50px;
   font-family: Helvetica;
   color: black;
@@ -35,19 +39,19 @@ section > h3{
 
 #chicken {
   background-color: pink;
-  border: 3px solid black;
+  border: 1px solid black;
   
 }
 
 #beef {
   background-color: red;
-  border: 3px solid black;
+  border: 1px solid black;
   color: white;
 }
 
 #sushi {
   background-color: yellow;
-  border: 3px solid black;
+  border: 1px solid black;
 }
 
 
@@ -58,7 +62,7 @@ section > h3{
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 3px solid black;
+    border: 1px solid black;
   }
   .col-lg-1 {
     width: calc(8.33% - 20px);
@@ -102,7 +106,7 @@ section > h3{
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 3px solid black;
+    border: 1px solid black;
   }
   .col-md-1 {
     width: calc(8.33% - 20px);
@@ -147,7 +151,7 @@ section > h3{
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, 
   .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 3px solid black;
+    border: 1px solid black;
   }
   .col-sm-1 {
     width: calc(8.33% - 20px);
